[package]
name = "onyxia"
version = "1.1.0"
edition = "2021"

[lib]
name = "onyxia_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "onyxia"
path = "src/main.rs"

[dependencies]
axon_awp_ffi   = { path = "../../axon/axon_awp_ffi" }
haniel         = { path = "../../haniel/crates/haniel" }
haniel_canvas  = { path = "../../haniel/crates/haniel_canvas" }
dirs-next      = "2.0"
reqwest        = { version = "0.12", features = ["json", "blocking"] }
tauri          = { version = "2.0", features = ["protocol-asset", "unstable"] }
serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1.0"
tokio          = { version = "1", features = ["full"] }
log            = "0.4"
env_logger     = "0.11"
url            = "2.5"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[features]
default = []

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
